--- a/testSet/remove/testset1000.in
+++ b/testSet/remove/testset1000.in
@@ -999,6 +999,7 @@ add s1 9
 add s1 3
 add s1 5
 add s1 4
+starttimer
 removeOne s1 3
 removeOne s1 10
 removeOne s1 2
@@ -1999,4 +2000,5 @@ removeOne s1 9
 removeOne s1 3
 removeOne s1 5
 removeOne s1 4
+endtimer
 quit
