--- a/testSet/add/testset100000.in
+++ b/testSet/add/testset100000.in
@@ -1,4 +1,5 @@
 create s1
+starttimer
 add s1 2
 add s1 8
 add s1 2
@@ -99999,4 +100000,5 @@ add s1 10
 add s1 5
 add s1 3
 add s1 4
+endtimer
 quit
